--- a/css/style.css
+++ b/css/style.css
@@ -2,17 +2,17 @@
 .adnav{
  background-color: black;
 }
+
 .adnav a{
   font-family: 'arial';
   color: white;  
   text-transform: uppercase;
 }
+
 .cabecera {
   width: 100%;
-  height: auto;
   min-height: 100%;
   max-height: 100%;
-  padding: 1rem 0;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -24,15 +24,15 @@
   font-size: 2.5rem;
   line-height: 2.5rem;
   letter-spacing: 0.8rem;
-  -webkit-background-clip: text;
 }
 
-.cabecera h2 {
-  max-width: 20rem;
-  font-size: 2rem;
-}
 
 @media (min-width: 768px) {
+  .cabecera {
+    height: 100vh;
+    padding: 0;
+  }
+    
   .cabecera h1 {
     font-size: 4rem;
     line-height: 4rem;
@@ -40,7 +40,7 @@
   .cabecera h2 {
   max-width: 20rem;
   font-size: 2rem;
-}
+  }
 }
 
 @media (min-width: 992px) {
@@ -59,8 +59,13 @@
   }
 }
 
+@media (max-width: 768px) {
+  .cabecera {
+    height: 100vh;
+    padding: 0;
+  }
+}
 .btn {
-  -webkit-box-shadow: 0 0.2rem 0.2rem 0 rgba(0, 0, 0, 0.1) !important;
   box-shadow: 0 0.2rem 0.2rem 0 rgba(0, 0, 0, 0.1) !important;
   padding: 0.5rem 1rem;
   font-family: 'arial';
@@ -68,7 +73,6 @@
   text-transform: uppercase;
   letter-spacing: .15rem;
   border: 0;
-  justify-content: center;
   display: flex;
 }
 
@@ -104,17 +108,14 @@
     padding: 0 0 0 2rem;
     border-left: 0.5rem solid black;
   }
+  .seccion-nosotros .project-text {
+    padding: 4rem;
+  }
 }
 
 .seccion-nosotros .project-text {
   padding: 2rem;
   font-size: 90%;
-}
-
-@media (min-width: 992px) {
-  .seccion-nosotros .project-text {
-    padding: 4rem;
-  }
 }
 
 .signup-section {
