--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,14 @@
-
-.adnav{
- background-color: black;
-}
-
-.adnav a{
-  font-family: 'arial';
-  color: white;  
-  text-transform: uppercase;
-}
+/*
+ * DAW M12 PFG
+ * Raúl Gutiérrez Cecilia
+ * Moises Meso Perez
+ *
+ */
 
 .cabecera {
   width: 100%;
-  min-height: 100%;
-  max-height: 100%;
+  height: 100vh;
+  padding: 0;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -20,53 +16,100 @@
 }
 
 .cabecera h1 {
+  font-size: 4.5rem;
+  line-height: 4.5rem;
+  letter-spacing: 0.5rem;
+}
+
+ .cabecera h2 {
+   max-width: 30rem;
+   font-size: 2rem;
+  }
+  
+.seccion-nosotros {
+  padding: 5rem 0;
+}
+
+.texto {
+  padding: 2rem;
+  font-size: 90%;
+
+}
+
+.seccion-mail {
+  padding: 5rem 0;
+  background: url("../img/contacto/contacto1.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
+}
+
+.seccion-contacto {
+  padding: 5rem 0 0;
+}
+
+.seccion-contacto .card {
+  border: 0;
+  border-bottom: 0.5rem solid #333333;
+}
+
+.seccion-contacto .card h4 {
+  font-size: 0.8rem;
+  letter-spacing: 0.2rem;
+}
+
+.seccion-contacto .card hr {
+  border-color: #333333;
+  border-width: 0.3rem;
+  width: 3rem;
+}
+
+.seccion-contacto .social {
+  margin-top: 5rem;
+}
+
+.seccion-contacto .social a {
+  text-align: center;
+  height: 3rem;
+  width: 3rem;
+  background: rgba(255, 255, 255, 0.2);
+  border-radius: 100%;
+  line-height: 3rem;
+  color: white;
+}
+
+.seccion-contacto .social a:hover {
+  color: #1b5594;
+}
+
+body {
   font-family: 'arial';
-  font-size: 2.5rem;
-  line-height: 2.5rem;
-  letter-spacing: 0.8rem;
+  letter-spacing: 0.0650em;
 }
 
-
-@media (min-width: 768px) {
-  .cabecera {
-    height: 100vh;
-    padding: 0;
-  }
-    
-  .cabecera h1 {
-    font-size: 4rem;
-    line-height: 4rem;
-  }
-  .cabecera h2 {
-  max-width: 20rem;
-  font-size: 2rem;
-  }
+.admin, footer{
+  padding: 5rem 0;
 }
 
-@media (min-width: 992px) {
-  .cabecera {
-    height: 100vh;
-    padding: 0;
-  }
-  .cabecera h1 {
-    font-size: 4.5rem;
-    line-height: 4.5rem;
-    letter-spacing: 0.5rem;
-  }
-  .cabecera h2 {
-    max-width: 30rem;
-    font-size: 3rem;
-  }
+a{
+  color: black; 
 }
 
-@media (max-width: 768px) {
-  .cabecera {
-    height: 100vh;
-    padding: 0;
-  }
+a:hover {
+  text-decoration: none;
+  color: #1b5594 !important;
 }
+
+.nav-link{
+  color: white;
+}
+
+.bg-black {
+  background-color: #161616 !important;
+}
+
 .btn {
-  box-shadow: 0 0.2rem 0.2rem 0 rgba(0, 0, 0, 0.1) !important;
   padding: 0.5rem 1rem;
   font-family: 'arial';
   font-size: 0.8rem;
@@ -78,141 +121,27 @@
 
 .btn-primary {
   background-color: #333333;
-  display: flex;
   justify-content: center;
 }
 
 .btn-primary:hover {
-  background-color: #4f837f;
+  background-color: #1b5594;
 }
 
-.btn-primary:focus {
-  background-color: #ffffff;
-  color: white;
+/*Moviles*/
+@media (max-width: 992px) {
+
+    .tab-content {
+    padding-top: 1rem;
+  }
 }
 
-.btn-primary:active {
-  background-color: #467370 !important;
-}
-
-.seccion-nosotros {
-  padding: 5rem 0;
-}
-
-.seccion-nosotros .featured-text {
-  padding: 2rem;
-}
-
+/*Pantallas Grandes*/
 @media (min-width: 992px) {
-  .seccion-nosotros .featured-text {
-    padding: 0 0 0 2rem;
-    border-left: 0.5rem solid black;
-  }
-  .seccion-nosotros .project-text {
-    padding: 4rem;
+
+  .seccion-nosotros .texto {
+    border-left: 0.5rem solid #343a40;
   }
 }
 
-.seccion-nosotros .project-text {
-  padding: 2rem;
-  font-size: 90%;
-}
 
-.signup-section {
-  padding: 5rem 0;
-  background: url("../img/contacto/contacto1.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-size: cover;
-}
-
-.signup-section .form-inline input {
-  -webkit-box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
-  box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0.1) !important;
-  padding: 1.25rem 2rem;
-  height: auto;
-  font-family: 'arial';
-  font-size: 80%;
-  text-transform: uppercase;
-  letter-spacing: 0.15rem;
-  border: 0;
-}
-
-.contact-section {
-  padding: 5rem 0 0;
-}
-
-.contact-section .card {
-  border: 0;
-  border-bottom: 0.25rem solid #333333;
-}
-
-.contact-section .card h4 {
-  font-size: 0.8rem;
-  font-family: 'arial';
-  text-transform: uppercase;
-  letter-spacing: 0.15rem;
-}
-
-.contact-section .card hr {
-  border-color: #333333;
-  border-width: 0.25rem;
-  width: 3rem;
-}
-
-.contact-section .social {
-  margin-top: 5rem;
-}
-
-.contact-section .social a {
-  text-align: center;
-  height: 3rem;
-  width: 3rem;
-  background: rgba(255, 255, 255, 0.1);
-  border-radius: 100%;
-  line-height: 3rem;
-  color: rgba(255, 255, 255, 0.3);
-}
-
-.contact-section .social a:hover {
-  color: rgba(255, 255, 255, 0.5);
-}
-
-.contact-section .social a:active {
-  color: #fff;
-}
-
-body {
-  font-family: 'arial';
-  letter-spacing: 0.0625em;
-}
-
-a {
-  color: #64a19d;
-}
-
-a:focus, a:hover {
-  text-decoration: none;
-  color: #3c6360;
-}
-
-.bg-black {
-  background-color: #161616 !important;
-}
-
-.bg-primary {
-  background-color: #64a19d !important;
-}
-
-.text-primary {
-  color: #64a19d !important;
-}
-
-footer {
-  padding: 5rem 0;
-}
-
-.admin {
-  padding: 5rem 0;
-}
